--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="base_background">#1A1732</color>
+    <color name="grey_textview">#757575</color>
+    <color name="blue">#229AB3</color>
 </resources>
