[ACTIVITY] activity_login.xml, activity_signup.xml [FUNCTION] Sign up, Sign in, Log out.

--- a/app/src/main/res/layout/activity_create_buku_pr.xml
+++ b/app/src/main/res/layout/activity_create_buku_pr.xml
@@ -4,6 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/base_background"
     tools:context=".CreateBukuPrActivity">
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/ic_left"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
