--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/etEmail"
+            android:id="@+id/etEmailLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/varela"
@@ -89,11 +89,12 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/etPassword"
+            android:id="@+id/etPasswordLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/varela"
             android:hint="Must be at least 6 characters"
+            android:inputType="textPassword"
             android:textSize="16sp" />
 
         <Space
@@ -114,7 +115,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvToRegister"
+        android:id="@+id/tvToSignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/varela"
@@ -137,7 +138,7 @@
         android:text="Don't have an account?"
         android:textColor="@color/white"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/tvToRegister"
+        app:layout_constraintEnd_toStartOf="@+id/tvToSignup"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
