--- a/app/src/main/res/layout/activity_buku_pr.xml
+++ b/app/src/main/res/layout/activity_buku_pr.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".BukuPrActivity">
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
