--- a/app/src/main/res/layout/activity_create_buku_pr.xml
+++ b/app/src/main/res/layout/activity_create_buku_pr.xml
@@ -7,13 +7,114 @@
     android:background="@color/base_background"
     tools:context=".CreateBukuPrActivity">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:background="@drawable/ic_left"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_topbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnBack"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="15dp"
+                android:background="@drawable/ic_left"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvBukuPr"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:text="BUKU PR"
+                android:textSize="26sp"
+                android:textColor="@color/grey_textview"
+                android:fontFamily="@font/varela"
+                android:paddingTop="3dp"
+                app:layout_constraintStart_toEndOf="@id/btnBack"
+                app:layout_constraintTop_toTopOf="@id/btnBack"
+                app:layout_constraintBottom_toBottomOf="@id/btnBack"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/ic_done"
+                app:layout_constraintTop_toTopOf="@id/tvDone"
+                app:layout_constraintBottom_toBottomOf="@id/tvDone"
+                app:layout_constraintRight_toLeftOf="@id/tvDone"/>
+
+            <TextView
+                android:id="@+id/tvDone"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="Done"
+                android:textColor="@color/grey_textview_2"
+                android:textSize="20sp"
+                android:fontFamily="@font/varela"
+                android:paddingTop="2dp"
+                android:layout_marginRight="20dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tvBukuPr"
+                app:layout_constraintBottom_toBottomOf="@id/tvBukuPr"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"
+            android:background="@drawable/style_create_bukupr"
+            android:padding="20dp">
+
+            <TextView
+                android:id="@+id/tvCreateBukuPr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CREATE BUKU PR"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/varela"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="@id/cl_main"
+                app:layout_constraintEnd_toEndOf="@id/cl_main"
+                app:layout_constraintTop_toTopOf="@id/cl_main"
+                />
+
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:text="Name"
+                android:textColor="@color/grey_textview_2"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@id/cl_main"
+                app:layout_constraintTop_toBottomOf="@id/tvCreateBukuPr"
+                />
+
+            <EditText
+                android:id="@+id/etNamaBukuPr"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Insert buku pr name"
+                android:textSize="20sp"
+                android:textColorHint="@color/grey_textview"
+                android:backgroundTint="@color/grey_textview"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/tvName"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
