--- a/app/src/main/res/layout/activity_create_buku_pr.xml
+++ b/app/src/main/res/layout/activity_create_buku_pr.xml
@@ -21,7 +21,7 @@
             android:layout_weight="0.5">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnBack"
+                android:id="@+id/btnBackCBP"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="30dp"
@@ -31,7 +31,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tvBukuPr"
+                android:id="@+id/tvNamaBukuPrCT"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:text="BUKU PR"
@@ -39,20 +39,21 @@
                 android:textColor="@color/grey_textview"
                 android:fontFamily="@font/varela"
                 android:paddingTop="3dp"
-                app:layout_constraintStart_toEndOf="@id/btnBack"
-                app:layout_constraintTop_toTopOf="@id/btnBack"
-                app:layout_constraintBottom_toBottomOf="@id/btnBack"/>
+                app:layout_constraintStart_toEndOf="@id/btnBackCBP"
+                app:layout_constraintTop_toTopOf="@id/btnBackCBP"
+                app:layout_constraintBottom_toBottomOf="@id/btnBackCBP"/>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnDoneCBP"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="@drawable/ic_done"
-                app:layout_constraintTop_toTopOf="@id/tvDone"
-                app:layout_constraintBottom_toBottomOf="@id/tvDone"
-                app:layout_constraintRight_toLeftOf="@id/tvDone"/>
+                app:layout_constraintTop_toTopOf="@id/tvDoneCBP"
+                app:layout_constraintBottom_toBottomOf="@id/tvDoneCBP"
+                app:layout_constraintRight_toLeftOf="@id/tvDoneCBP"/>
 
             <TextView
-                android:id="@+id/tvDone"
+                android:id="@+id/tvDoneCBP"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:text="Done"
@@ -62,8 +63,8 @@
                 android:paddingTop="2dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tvBukuPr"
-                app:layout_constraintBottom_toBottomOf="@id/tvBukuPr"/>
+                app:layout_constraintTop_toTopOf="@id/tvNamaBukuPrCT"
+                app:layout_constraintBottom_toBottomOf="@id/tvNamaBukuPrCT"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -76,7 +77,7 @@
             android:padding="20dp">
 
             <TextView
-                android:id="@+id/tvCreateBukuPr"
+                android:id="@+id/tvCreateTugas"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="CREATE BUKU PR"
@@ -99,7 +100,7 @@
                 android:textColor="@color/grey_textview_2"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@id/cl_main"
-                app:layout_constraintTop_toBottomOf="@id/tvCreateBukuPr"
+                app:layout_constraintTop_toBottomOf="@id/tvCreateTugas"
                 />
 
             <EditText
@@ -108,6 +109,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Insert buku pr name"
                 android:textSize="20sp"
+                android:textColor="@color/white"
                 android:textColorHint="@color/grey_textview"
                 android:backgroundTint="@color/grey_textview"
                 android:layout_marginTop="10dp"
