--- a/app/src/main/res/layout/activity_create_tugas.xml
+++ b/app/src/main/res/layout/activity_create_tugas.xml
@@ -16,60 +16,51 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_topbar"
                 android:layout_width="match_parent"
-                android:layout_height="95dp"
-                android:layout_weight="1">
+                android:layout_height="90dp"
+                android:layout_weight="0.5">
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btnBackCT"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="30dp"
-                    android:background="@drawable/ic_left"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvNamaBukuPrCT"
-                    android:layout_width="230dp"
-                    android:layout_height="40dp"
-                    android:ellipsize="end"
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/mbBackCT"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:background=""
+                    android:text="asdasdasdasdasdasd"
                     android:fontFamily="@font/varela"
-                    android:maxLines="1"
-                    android:paddingTop="3dp"
-                    android:singleLine="true"
+                    android:paddingLeft="0dp"
                     android:textColor="@color/grey_textview"
-                    android:textSize="26sp"
-                    app:layout_constraintBottom_toBottomOf="@id/btnBackCT"
-                    app:layout_constraintStart_toEndOf="@id/btnBackCT"
-                    app:layout_constraintTop_toTopOf="@id/btnBackCT" />
+                    android:textSize="16sp"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:ellipsize="end"
+                    app:icon="@drawable/ic_left"
+                    app:iconTint="@color/grey_textview"
+                    app:iconGravity="start"
+                    app:iconSize="40dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/cl_topbar"
+                    app:layout_constraintTop_toTopOf="@id/cl_topbar" />
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btnDoneCT"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:background="@drawable/ic_done"
-                    app:layout_constraintBottom_toBottomOf="@id/tvDoneCT"
-                    app:layout_constraintRight_toLeftOf="@id/tvDoneCT"
-                    app:layout_constraintTop_toTopOf="@id/tvDoneCT" />
-
-                <TextView
-                    android:id="@+id/tvDoneCT"
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/mbDoneCT"
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:background=""
                     android:fontFamily="@font/varela"
-                    android:paddingTop="2dp"
+                    android:paddingLeft="0dp"
                     android:text="Done"
                     android:textColor="@color/grey_textview_2"
-                    android:textSize="20sp"
-                    app:layout_constraintBottom_toBottomOf="@id/tvNamaBukuPrCT"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/tvNamaBukuPrCT" />
+                    android:textSize="16sp"
+                    app:icon="@drawable/ic_done"
+                    app:iconTint="@color/grey_textview_2"
+                    app:iconGravity="textStart"
+                    app:iconSize="25dp"
+                    app:layout_constraintBottom_toBottomOf="@id/mbBackCT"
+                    app:layout_constraintEnd_toEndOf="@id/cl_topbar"
+                    app:layout_constraintTop_toTopOf="@id/mbBackCT" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -82,7 +73,7 @@
                 android:padding="20dp">
 
                 <TextView
-                    android:id="@+id/tvCreateTugas"
+                    android:id="@+id/tvCreateBukuPr"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -104,7 +95,7 @@
                     android:textColor="@color/grey_textview_2"
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="@id/cl_main"
-                    app:layout_constraintTop_toBottomOf="@id/tvCreateTugas" />
+                    app:layout_constraintTop_toBottomOf="@id/tvCreateBukuPr" />
 
                 <EditText
                     android:id="@+id/etNamaTugas"
