[PROGRESS] CreateBukuPrActivity.kt

--- a/app/src/main/res/layout/activity_create_buku_pr.xml
+++ b/app/src/main/res/layout/activity_create_buku_pr.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/mbBackCBP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background=""
+                android:background="@color/base_background"
                 android:fontFamily="@font/varela"
                 android:paddingLeft="0dp"
                 android:text="BUKU PR"
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
-                android:background=""
+                android:background="@color/base_background"
                 android:fontFamily="@font/varela"
                 android:paddingLeft="0dp"
                 android:text="Done"
