--- a/app/src/main/res/layout/activity_create_tugas.xml
+++ b/app/src/main/res/layout/activity_create_tugas.xml
@@ -26,8 +26,7 @@
                     android:id="@+id/mbBackCT"
                     android:layout_width="280dp"
                     android:layout_height="wrap_content"
-                    android:background=""
-                    android:text="asdasdasdasdasdasd"
+                    android:background="@color/base_background"
                     android:fontFamily="@font/varela"
                     android:paddingLeft="0dp"
                     android:textColor="@color/grey_textview"
@@ -48,7 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="15dp"
-                    android:background=""
+                    android:background="@color/base_background"
                     android:fontFamily="@font/varela"
                     android:paddingLeft="0dp"
                     android:text="Done"
