--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="blue">#229AB3</color>
     <color name="grey_textview_2">#C9C4D3</color>
     <color name="blue2">#262636</color>
+    <color name="item_bukupr">#262636</color>
 </resources>
