--- a/app/src/main/res/layout/activity_buku_pr.xml
+++ b/app/src/main/res/layout/activity_buku_pr.xml
@@ -15,8 +15,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="409dp"
-        android:layout_height="681dp"
+        android:id="@+id/rvBukuPr"
+        tools:listitem="@layout/item_bukupr"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
